# kqapro-hallucination-lab

./: .gitignore  README.md  pyproject.toml
scripts/: build_all_processed.py  build_gold_subgraphs.py  build_onehop_by_seed.py  export_question_base.py  graph_entity_eval.py  graph_head_eval.py  graph_reason_eval.py
src/kqapro_hallucination/: eval_common.py  gold_subgraph_builder.py  io.py  kb_loader.py  literal_utils.py  onehop_builder.py  paths.py  prompt_builders.py  question_node_extractor.py  schemas.py  sparql_engine.py
tests/: test_eval_common.py  test_question_node_extractor.py
