[project]
name = "kqapro-hallucination-lab"
version = "0.1.0"
description = "Reproducible KQA-Pro data pipeline for hallucination-signal experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.3",
    "pyoxigraph>=0.5.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
